# checkmerge-llvm

./: .gitignore  CMakeLists.txt  README.md  build-tests.sh
checkmerge/: CMakeLists.txt  CheckMergePrinter.cpp  DependenceCollector.cpp  DependenceCollector.h  SourceVariableMapper.cpp  SourceVariableMapper.h
test/: .gitignore  calc.c  calc_a.c  calc_b.c  fibonacci.c  fibonacci.h  pointers.c  trivial.c
